# ChangeLog for media-sound/mt-daapd
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mt-daapd/ChangeLog,v 1.11 2006/01/04 15:10:49 flameeyes Exp $

  04 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/mt-daapd-0.2.3-sparc.patch, mt-daapd-0.2.3-r2.ebuild:
  Applied patch to fix bus error on sparc, and keyworded ~sparc as per bug
  #110663.

  04 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  mt-daapd-0.2.3-r2.ebuild:
  Filter out --as-needed flags.

*mt-daapd-0.2.3-r2 (01 Dec 2005)

  01 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/mt-daapd-0.2.3-persist-fix.patch, mt-daapd-0.2.3-r1.ebuild,
  +mt-daapd-0.2.3-r2.ebuild:
  New revision, with optional avahi support (with howl compatibility). Moved
  ~ppc-macos keyword to this new revision that has dropped the debug useflag
  and has no more dependency on efence. Also apply patch for bug #111442.

  30 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> files/mt-daapd.init.2:
  Don't provide daap to avoid warnings during start/stop of services. mt-daapd
  is going to be the only daapd server for now anyway.

*mt-daapd-0.2.3-r1 (21 Oct 2005)

  21 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/mt-daapd-0.2.3-pidfile.patch, +files/mt-daapd.init.2,
  +mt-daapd-0.2.3-r1.ebuild:
  New revision, patched to allow launching more than one instance of mt-daapd.
  Also new init.d file that allows symlinked-launches.

  04 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> mt-daapd-0.2.3.ebuild:
  Added ~sh.

*mt-daapd-0.2.3 (03 Oct 2005)

  03 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> +mt-daapd-0.2.3.ebuild:
  Version bumped, Bug 106032.
  Fixed howl USE flag problem, Bug 94899.
  Fixed vorbis USE flag problem, Bug 96202.

  25 Jul 2005; David Holm <dholm@gentoo.org> mt-daapd-0.2.1.1.ebuild:
  Added to ~ppc.

  28 May 2005; Jan Brinkmann <luckyduck@gentoo.org> mt-daapd-0.2.1.1.ebuild:
  cosmetic changes
