@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mt-daapd
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mt-daapd/ChangeLog,v 1.11 2006/01/04 15:10:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mt-daapd/ChangeLog,v 1.12 2006/01/12 16:17:38 flameeyes Exp $
+
+  12 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> -mt-daapd-0.2.3.ebuild,
+  -mt-daapd-0.2.3-r1.ebuild:
+  Drop old versions.
 
   04 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
   +files/mt-daapd-0.2.3-sparc.patch, mt-daapd-0.2.3-r2.ebuild:
